# openpgp-card-ffi

./: .codespellrc  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  deny.toml  encrypted-ec-message.asc  encrypted-rsa-message.asc  justfile  openpgp_cards.h  run.sh  rustfmt.toml  sample-ec-key.asc  sample-rsa-key.asc  sample.c  statement.txt
.github/workflows/: ci.yml  e2e.yml
.reuse/: dep5
src/: lib.rs
