[package]
name = "openpgp-cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "openpgp_cards"
crate-type = ["cdylib"]


[build-dependencies]
cbindgen = "0.26.0"

[dependencies]
card-backend-pcsc = "0.5.0"
openpgp-card = "0.4.0"
