# SPDX-FileCopyrightText: 2024 Wiktor Kwapisiewicz <wiktor@metacode.biz>
# SPDX-License-Identifier: Apache-2.0
[package]
name = "openpgp-cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "openpgp_cards"
crate-type = ["cdylib"]


[build-dependencies]
cbindgen = { version = "0.26.0", default-features = false }

[dependencies]
card-backend-pcsc = "0.5.0"
env_logger = "0.10.1"
openpgp-card = "0.4.0"
